--- a/src/main/java/pl/put/poznan/HappeningsForm.form
+++ b/src/main/java/pl/put/poznan/HappeningsForm.form
@@ -16,21 +16,21 @@
           <text value="Show details"/>
         </properties>
       </component>
-      <component id="1bf6b" class="javax.swing.JTable" binding="table1" default-binding="true">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="d527" class="javax.swing.JButton" binding="addNewEventButton" default-binding="true">
+      <component id="d527" class="javax.swing.JButton" binding="takePartButton" default-binding="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add new event"/>
+          <text value="Take part"/>
         </properties>
+      </component>
+      <component id="a2a27" class="javax.swing.JList" binding="list1" custom-create="true" default-binding="true">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
